# hajime-ui

client/: README.md  index.html  package-lock.json  package.json  prod.Dockerfile
client/nginx/: default.conf
client/src/: App.tsx  main.tsx
client/src/features/api/: axios.ts
client/src/features/canvas/routes/: index.tsx
client/src/features/core/: store.ts
client/src/features/core/components/NavBar/: index.tsx
client/src/features/core/models/: generatedElement.ts  index.ts
client/src/features/core/pages/: home.tsx  root.tsx
client/src/features/core/routes/: home.tsx
client/src/features/template/pages/: canvas.tsx  index.tsx  preview.tsx
client/src/utils/: axios.ts  hooks.ts
server/: .env  .eslintrc  app.py  models.py  package-lock.json  package.json  pyproject.toml  tsconfig.json  utils.py
server/ai/: llms.py  prompts.py
server/src/: app.ts  routes.ts  types.ts
server/src/controllers/generateTemplate/: index.ts
server/src/controllers/getTemplateCode/: index.ts
server/src/controllers/getTemplatePreview/: index.ts
server/src/controllers/saveTemplate/: index.ts
server/src/db/: index.ts
server/src/services/: index.ts
server/src/utils/: constants.ts  functions.ts
